--- a/ItUniver.TeleCalc.Web/Views/Calc/Index.cshtml
+++ b/ItUniver.TeleCalc.Web/Views/Calc/Index.cshtml
@@ -1,11 +1,19 @@
 ﻿
 @{
     ViewBag.Title = "Index";
-
+    var error=ViewBag.Error;
 }
 
 <h2>ItUniver </h2>
+@if (error!=null)
+{
+    <div>
+        @error
+    </div>
+}
+else
+{
 <div> 
     <b>@ViewBag.OperName</b> (@ViewBag.DataX, @ViewBag.DataY) = @(ViewBag.Result) 
 </div>
-
+}
