--- a/ItUniver.TeleCalc.Web/Views/Shared/_Layout.cshtml
+++ b/ItUniver.TeleCalc.Web/Views/Shared/_Layout.cshtml
@@ -17,13 +17,11 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink("Имя приложения", "Index", "Home", null, new { @class = "navbar-brand" })
+                @Html.ActionLink("ТелеКальк", "Index", "Calc", null, new { @class = "navbar-brand" })
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Домашняя страница", "Index", "Home")</li>
-                    <li>@Html.ActionLink("О программе", "About", "Home")</li>
-                    <li>@Html.ActionLink("Контакт", "Contact", "Home")</li>
+                    <li>@Html.ActionLink("Оперции", "Operations", "Calc")</li>
                 </ul>
             </div>
         </div>
@@ -32,7 +30,7 @@
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; @DateTime.Now.Year – приложение ASP.NET</p>
+            <p>&copy; @DateTime.Now.Year – ТелеКальк</p>
         </footer>
     </div>
 
