запрос на сервер

--- a/ItUniver.TeleCalc.Web/Views/Shared/Ops.cshtml
+++ b/ItUniver.TeleCalc.Web/Views/Shared/Ops.cshtml
@@ -4,12 +4,8 @@
     
 }
 
+
 <h2>OPS</h2>
-<ul>
-    @foreach (string elem in ViewBag.list)
-    {
-        <li>
-            @Html.Partial("Operation",elem)
-        </li>
-    }
-</ul>
+
+@Helpers.LiList(list)
+<hr />
