--- a/ItUniver.TeleCalc.Web/Views/Calc/Exec.cshtml
+++ b/ItUniver.TeleCalc.Web/Views/Calc/Exec.cshtml
@@ -5,6 +5,9 @@
     var list = ViewBag.list;
 }
 
+
+
+
 <h2>Вычисление</h2>
 
 @using (Html.BeginForm()) 
@@ -12,21 +15,21 @@
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-        <h4>CalcModel</h4>
+        <h4>Помогатор</h4>
         <hr />
         @Html.ValidationSummary(true)
 
         <div class="form-group">
             @Html.LabelFor(model => model.Opername, new { @class = "control-label col-md-2" })
             <div class="col-md-8">
-                @Html.DropDownListFor(model => model.Opername, list as SelectList)
+                @Html.DropDownListFor(model => model.Opername, list as SelectList, htmlAttributes: new { @class= "form-control"})
             </div>
         </div>
 
         <div class="form-group">
             @Html.LabelFor(model => model.X, new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.X)
+                @Html.EditorFor(model => model.X, new { htmlAttributes = new { @class = "form-control" } }) 
                 @Html.ValidationMessageFor(model => model.X)
             </div>
         </div>
@@ -34,22 +37,23 @@
         <div class="form-group">
             @Html.LabelFor(model => model.Y, new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Y)
+                @Html.EditorFor(model => model.Y, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.Y)
             </div>
         </div>
 
         <div class="form-group">
             @Html.LabelFor(model => model.Result, new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Result)
+            <div class="col-md-10" id="result">
+                @Html.DisplayFor(model => model.Result, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.Result)
             </div>
         </div>
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Вычислить" class="btn btn-default" />
+                @Html.Submit("Вычислить", "calculate(); return false;")
+                
             </div>
         </div>
     </div>
@@ -58,3 +62,22 @@
 <div>
     @Html.ActionLink("Back to List", "Index")
 </div>
+
+<script>
+
+    function calculate()
+    {
+        $.ajax({
+            method: "POST",
+            url: "/Calc/Exec",
+            data: $('form').serializeArray()
+        }).success(
+        function(result)
+        {
+            $("#result").html(result);
+        }
+        )
+        alert("Calcul")
+    }
+
+</script>
