--- a/ItUniver.TeleCalc.Web/Views/Calc/Exec.cshtml
+++ b/ItUniver.TeleCalc.Web/Views/Calc/Exec.cshtml
@@ -37,25 +37,18 @@
         <div class="form-group">
             @Html.LabelFor(model => model.Y, new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Y, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.EditorFor(model => model.Y, new { htmlAttributes = new { @class = "form-control" }, @id = "inputY", @onblur = "calculate(); return false;" })
                 @Html.ValidationMessageFor(model => model.Y)
             </div>
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.Result, new { @class = "control-label col-md-2" })
-            <div class="col-md-10" id="result">
-                @Html.DisplayFor(model => model.Result, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Result)
+            <div id="result">
+                @Html.Partial("_Result")
             </div>
         </div>
 
-        <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
-                @Html.Submit("Вычислить", "calculate(); return false;")
-                
-            </div>
-        </div>
+
     </div>
 }
 
@@ -63,21 +56,9 @@
     @Html.ActionLink("Back to List", "Index")
 </div>
 
-<script>
-
-    function calculate()
-    {
-        $.ajax({
-            method: "POST",
-            url: "/Calc/Exec",
-            data: $('form').serializeArray()
-        }).success(
-        function(result)
-        {
-            $("#result").html(result);
-        }
-        )
-        alert("Calcul")
-    }
-
-</script>
+ <script>
+         inputY.onblur = function ()
+                {
+                    document.getElementById('calc-form').submit();
+                }
+        </script> @*отправка при потери фокуса на inputY*@ 
