Добавил задержку, и появление контролов, но есть ошибка их добавления

--- a/ItUniver.TeleCalc.Web/Views/Calc/Operations.cshtml
+++ b/ItUniver.TeleCalc.Web/Views/Calc/Operations.cshtml
@@ -5,10 +5,4 @@
 
 <h2>Досупные операции: </h2>
 
-    @foreach(string elem in  ViewBag.list)
-    {
-       <li>
-           @elem
-       </li>
-    }
-
+@Helpers.LiList(ViewBag.opers)
