--- a/ItUniver.TeleCalc.Web/Views/Calc/Exec.cshtml
+++ b/ItUniver.TeleCalc.Web/Views/Calc/Exec.cshtml
@@ -10,55 +10,80 @@
 
 <h2>Вычисление</h2>
 
-@using (Html.BeginForm()) 
+@using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
-    
+
     <div class="form-horizontal">
         <h4>Помогатор</h4>
         <hr />
-        @Html.ValidationSummary(true)
+        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
 
         <div class="form-group">
-            @Html.LabelFor(model => model.Opername, new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.Opername, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-8">
-                @Html.DropDownListFor(model => model.Opername, list as SelectList, htmlAttributes: new { @class= "form-control"})
+                @Html.DropDownListFor(model => model.Opername,
+                Model.OperationList,
+                htmlAttributes: new
+                {
+                    @class = "form-control",
+                    oninput = "calculate();"
+                })
             </div>
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.X, new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.InputData,
+            htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.X, new { htmlAttributes = new { @class = "form-control" } }) 
-                @Html.ValidationMessageFor(model => model.X)
+                @Html.EditorFor(
+                model => model.InputData,
+                "Collection",
+                new
+                {
+                    htmlAttributes = new
+                    {
+                        @class = "form-control",
+                        oninput = "calculate();",
+                        style = "display:inline-block; margin-left:5px; margin-top:5px; height: 30px; width: 20%;"
+                    }
+                })
+                @Html.ValidationMessageFor(model => model.InputData, "", new { @class = "text-danger" })
             </div>
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.Y, new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Y, new { htmlAttributes = new { @class = "form-control" }, @id = "inputY", @onblur = "calculate(); return false;" })
-                @Html.ValidationMessageFor(model => model.Y)
+            @Html.LabelFor(model => model.Result, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10" id="result">
             </div>
         </div>
-
-        <div class="form-group">
-            <div id="result">
-                @Html.Partial("_Result")
-            </div>
-        </div>
-
-
     </div>
 }
 
-<div>
-    @Html.ActionLink("Back to List", "Index")
-</div>
 
- <script>
-         inputY.onblur = function ()
-                {
-                    document.getElementById('calc-form').submit();
-                }
-        </script> @*отправка при потери фокуса на inputY*@ 
+
+<script>
+
+    function calculate() {
+
+        var xElement = $("input[name=InputData]").last();
+
+        if (xElement.val().endsWith(" ")) {
+            var newInput = $("<input class=\"form-control text-box single-line\" name=\"InputData\" oninput=\"calculate();\" type=\"text\" value=\"\">");
+            newInput.insertAfter(xElement);
+            newInput.focus();
+        }
+        setTimeout(function _post() {
+            $.ajax({
+                method: "POST",
+                url: "/Calc/Exec",
+                data: $('form').serializeArray()
+            }).success(
+            function (result) {
+                $("#result").html(result);
+            }
+            )
+        }, 5000);
+    }
+
+</script>
